# godzi-desktop

src/: CMakeLists.txt
src/Applications/: CMakeLists.txt
src/Applications/DesktopViewer/: AboutDialog  AboutDialog.cpp  AppImages.qrc  AppSettingsDialog  AppSettingsDialog.cpp  CMakeLists.txt  CMakeLists_mine.txt  Common  DataObjectActionAdapter  DataObjectActionAdapter.cpp  DataSourceManager  DataSourceManager.cpp  DesktopMainWindow  DesktopMainWindow.cpp  GodziApp  GodziApp.cpp  GodziQtApplication  MapLayerCatalogWidget  MapLayerCatalogWidget.cpp  OpenFileDialog  OpenFileDialog.cpp  PlaceSearchWidget  PlaceSearchWidget.cpp  ServerManagementWidget  ServerManagementWidget.cpp  ServerTreeWidget  ServerTreeWidget.cpp  WMSEditDialog  WMSEditDialog.cpp  WMSOptionsWidget  WMSOptionsWidget.cpp  main.cpp
src/Applications/DesktopViewer/ui/: AboutDialog.ui  AppSettingsDialog.ui  OpenFileDialog.ui  WMSEditDialog.ui  WMSOptionsWidget.ui
src/CMakeModules/: BuildSystemVariables.cmake  CreateDependency.cmake  CreateDependencyLists.cmake  CreateExecutable.cmake  CreateImportedLibrary.cmake  CreateInstallProperties.cmake  CreateLibrary.cmake  CreatePlugin.cmake  CreateProject.cmake  HelperFunctions.cmake  ImportBoost.cmake  ImportEXPAT.cmake  ImportKML.cmake  ImportOSG.cmake  ImportOSGEARTH.cmake  ImportQT.cmake  ImportSQLITE3.cmake
src/SDK/: CMakeLists.txt
src/SDK/Godzi/: Actions  Actions.cpp  Application  Application.cpp  Common  Project  Project.cpp  ViewerWidgets  ViewerWidgets.cpp
src/SDK/include/Godzi/: Application  Common  DataSources  Earth  KML  Place  Placemark  Project  SearchEngine
src/SDK/include/Godzi/Features/: AGGLiteRasterizerTileSource  ApplyFeature  DispatchFeature  Feature  FeatureSource  Geometry  KMLFeatureModelSource  KMLFeatureSource  KMLFeatureSourceOptions  KMLGeometrySymbolizer  Placemark  Symbol  SymbolicNode  Symbolizer
src/SDK/include/Godzi/KML/: KMLActions  KMLDataSource  KMLFeatureSource  KMLFeatureSourceOptions  KMLParser  KMLSymbol
src/SDK/include/Godzi/UI/: ViewController  ViewerWidgets
src/SDK/include/Godzi/WMS/: WMSActions  WMSDataSource
src/SDK/src/Godzi/: Actions.cpp  Application.cpp  DataSources.cpp  Earth.cpp  KML.cpp  Place.cpp  Placemark.cpp  Project.cpp  SearchEngine.cpp
src/SDK/src/Godzi/Features/: AGGLiteRasterizerTileSource.cpp  ApplyFeature.cpp  DispatchFeature.cpp  Feature.cpp  FeatureSource.cpp  Geometry.cpp  KMLFeatureModelSource.cpp  KMLFeatureSource.cpp  KMLGeometrySymbolizer.cpp  Placemark.cpp  SymbolicNode.cpp  Symbolizer.cpp
src/SDK/src/Godzi/KML/: KMLActions.cpp  KMLDataSource.cpp  KMLFeatureModelSource.cpp  KMLFeatureSource.cpp  KMLParser.cpp
src/SDK/src/Godzi/UI/: ViewerWidget.cpp  ViewerWidgets.cpp
src/SDK/src/Godzi/WMS/: WMSActions.cpp  WMSDataSource.cpp
src/data/: default.earth  example.kml  kmlsample.kml  marker.osg
